--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 spring:
   application:
     name: widget-service
+  datasource:
+    url: jdbc:postgresql://postgresql:5432/widgetdb
+    username: postgres
+    password: password
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: create
 
 application:
   repository:
